Fixed layout issues with IPv4 Subnet Calculator

--- a/assets/utilities/IPv4Calculator/css/styles.css
+++ b/assets/utilities/IPv4Calculator/css/styles.css
@@ -13,9 +13,8 @@
 
 .admin-btn {
   display: flex;
-  align-items: flex-end;
   padding: 10px;
-  margin: 2%;
+  margin: 2% 7% 2% 7%;
   justify-content: center;
   background-color: rgba(0,255,0,0.5);
   list-style-type: none;
@@ -104,10 +103,7 @@ button:hover {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  flex: 1;
   flex-direction: column;
-  padding: 2%;
-
   /*-----------Color------------*/
 }
 
@@ -119,17 +115,13 @@ button:hover {
   display: -webkit-flex;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
 
   /*-----------Color------------*/
   background-color: rgba(0,0,0,0.5)!important;
 
   /*---------Positioning--------*/
   margin-top: 5vh;
-}
-
-fieldset {
-  /*-----------Color------------*/
-
 }
 
 input {
@@ -170,7 +162,7 @@ h1 {
 
 textarea {
   display: flex;
-  width: 75%;
+  width: 100%;
   min-height: 100px;
   overflow: scroll;
   overflow-x: hidden;
